--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "udhaar_home_alt",
+  "name": "udhaar_frontend",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,8 @@
     "@tailwindcss/forms": "^0.3.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
