--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
     "@tailwindcss/forms": "^0.3.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
